--- a/src/routes/members/index.less
+++ b/src/routes/members/index.less
@@ -78,6 +78,8 @@
         width: 100%;
         height: 100%;
 
+        z-index: @z-index-modal;
+
         transition-property: visibility, opacity;
         transition-duration: @duration-transition;
         background-color: fade(white, 50%);
